# sukr

./: .gitignore  .rustfmt.toml  404.html  AGENTS.md  Cargo.toml  README.md  architecture.html  comparison.html  configuration.html  content-organization.html  deployment.html  flake.nix  getting-started.html  index.html  security.html  sitemap.xml  style.css
.github/workflows/: binary-cache.yaml  release.yaml
docs/: site.toml
docs/charters/: sukr-v1.md
docs/content/: _404.md  _index.md  architecture.md  comparison.md  configuration.md  content-organization.md  deployment.md  getting-started.md  security.md
docs/content/features/: _index.md  css.md  d2-diagrams.md  feeds.md  math.md  mermaid.md  sections.md  sitemap.md  syntax-highlighting.md  templates.md
docs/models/: sukr-compiler.md
docs/plans/: api-stabilization.md  documentation-overhaul.md  formal-model-alignment.md
docs/static/: style.css
docs/templates/: base.html  page.html
docs/templates/section/: default.html
docs/templates/tags/: default.html
features/: css.html  d2-diagrams.html  feeds.html  index.html  math.html  mermaid.html  sections.html  sitemap.html  syntax-highlighting.html  templates.html
queries/: README.md
queries/just/: highlights.scm  injections.scm  locals.scm
src/: config.rs  content.rs  css.rs  d2.rs  error.rs  escape.rs  feed.rs  highlight.rs  main.rs  math.rs  render.rs  sitemap.rs  template_engine.rs
themes/: README.md  dracula.css  github_dark.css  github_light.css  gruvbox.css  nord.css  onedark.css
